ranking votes queries improved
